# izolation

./: .gitignore  CMakeLists.txt  README.md
izolation/: CMakeLists.txt  izolation.c
